# Obelisk-Manager

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-prog.sh  obelisk.go
.github/workflows/: cmake-macos-latest.yml  cmake-ubuntu-latest.yml  cmake-windows-latest.yml  cmake.yml  flawfinder.yml
src/: AddPasswordToDatabase.hpp  DelPassword.hpp  SettingsLocation.hpp  VerifyPass.hpp  base64.hpp  config.h.in  main.cpp  takeUserPassword.hpp  unix-getch.hpp
